--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -470,7 +470,7 @@
  lec.17.d:0 "自北伐战争尘埃落定以来，南直系军阀便一直以八省联合政权统治着中国东南沿海地区。在这段日子里，他们成了德国人东亚监事会的亲密盟友，后者为南直系提供了大量财富，但也为其日后的土崩瓦解埋下祸根。反租界运动的农民们在大街上揭竿起义、安徽省自立门户脱离联合，以及孙传芳的遇刺事件，看上去，这些因素加在一起便足以使八省联合在那些妄图从其毁灭中借机牟利的人面前不堪一击。\n\n国民党再度于福建起义，[SQI.GetAdjective]于北境虎视眈眈，而[ANQ.GetNameDef]则从西方背刺如今由[LEP.GetLeader]所领导的宁系军阀。与此同时，湘系与两广的联省派也抛弃了四分五裂的联合，意图独善其身，伺机卷土重来。对许多人来说，直系的统治似乎已经完蛋了，也有许多人更关心国民党与某些北方军阀的反租界主义倾向。"
  lec.17.a:0 "令人担忧的新闻"
  lec.18.t:0 "难民涌入使馆诸城"
- lec.18.d:0 "为了逃离由孙传芳的八省联合崩溃所导致的混乱局势，成千上万的难民涌入了中立区。这还不至于对我们的管理造成太大的影响，但这也无助于自黑色星期一之后稳定使馆诸城。"
+ lec.18.d:0 "下午4点20分。马蹄声伴着尘土在官道上扬起，仿佛一层遮蔽现实的迷雾。吴家老小五口，挤在一辆破旧的板车上，颠簸着向东行进。他们已不知疲倦，只知向前。官道两旁的枯树如鬼爪般伸向天际，映衬着西沉的日头。吴老太太裹紧身上的破棉衣，朝前看了一眼，声音干涩：“还有多远？”\n\n“再走一天，就能进上海。”吴孝泉低声回道，他是家中唯一的壮年男子，肩上担着整个家族的生死。吴老太太点了点头，没再多言。她的目光落在年仅八岁的吴小满身上，孩子紧紧抱着怀中的小布包，那是他从老家带出来的唯一一件东西——一只裂了口的木雕鸟。\n\n黄昏时分，江湾镇外。\n\n风中裹挟着湿冷的海腥味，上海近在咫尺。然而，前方却有一道关卡。十几名全副武装的士兵懒散地倚靠在临时搭建的木栅栏旁，偶尔瞥一眼涌来的逃难人群，眼神麻木而冷漠。吴孝泉推着板车走到关卡前，尽量让自己显得沉稳。他知道，这道关卡，决定了他们是活着进城，还是死在这里。“站住。”士兵拦住了他们，目光扫过吴孝泉，又落在板车上的家人身上，嗤笑道：“流民？哪来的？”“安徽。”吴孝泉低下头，双手死死抓住板车的扶手，“我们是逃荒的...家乡乱了，求官爷行个方便，让我们进城。”\n\n士兵咂了咂嘴，似乎已经听腻了这样的故事。他懒洋洋地伸出手：“规矩懂吧？”吴孝泉咬了咬牙，从怀里摸出一块皱巴巴的银角，小心翼翼地递过去。士兵接过后，用牙咬了咬，确认是真货，才不耐烦地挥了挥手：“进去吧，别给老子添麻烦。”板车再次颠簸前行，跨过那道门槛，吴孝泉终于长舒了一口气。上海的灯火已在夜色中亮起，那是一片他们未曾见过的世界。吴小满望着远方，轻轻抚摸着怀里的木雕鸟，低声问道：“爹，我们还会回去吗？”吴孝泉沉默片刻，揉了揉孩子的头发，声音低沉而坚定：“不会了。”"
  lec.18.a:0 "来了一个就会跟来一堆，瞧好吧"
  lec.19.t:0 "冲突导致市场波动"
  lec.19.d:0 "在该区域爆发冲突之后，市场对使馆城市委任政府的信心一落千丈。即使工部局已经对投资者保证使馆城市能平息冲突，但许多人对这个行不及言的讨论会深表怀疑。"
