--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -715,17 +715,37 @@
  LEC_CHD_Y_DEF: "英属中国"
 
  LEC_sha_he_hog: "维克托·沙逊"
- LEC_he_shi_li_sec: "何世礼"
- LEC_he_gan_tang_for: "何甘棠"
- LEC_he_fu_eco: "何福"
+ LEC_sha_he_hog_desc:0 "§Y生于：§!§L1881年12月20日；意大利王国，那不勒斯§!\n§Y背景：§!§L$POLITICS_Sha_Xun_DESC$§!"
+ SHC_T_Sassoon_eco_pau: "维克托·沙逊"
+ SHC_T_Sassoon_eco_pau_desc:0 "§Y生于：§!§L1881年12月20日；意大利王国，那不勒斯§!\n§Y背景：§!§L$POLITICS_Sha_Xun_DESC$§!"
  LEC_Robert_Hotung_hog: "何东"
+ LEC_Robert_Hotung_hog_desc:0 "§Y生于：§!§L1862年12月22日；英属香港§!\n§Y背景：§!§L$POLITICS_HE_DONG_DESC$§!"
+ LEC_he_gan_tang_for: "何甘棠"
+ LEC_he_gan_tang_for_desc:0 "§Y生于：§!§L1866年9月16日；英属香港§!\n§Y背景：§!§L何甘棠是何东的同母异父的弟弟，其父亲是广东人郭兴贤。何甘棠早年就读于香港中央书院，毕业后，在渣打洋行经营保险、糖业等生意。后在中国内地及澳门、东南亚遍设商号，经营金融、糖业、花纱、煤炭、杂货等业务。何甘棠曾经在香港获得鸦片专利权，向大清输出英国货。§!"
+ LEC_he_shi_li_sec: "何世礼"
+ LEC_he_shi_li_sec_desc:0 "§Y生于：§!§L1906年5月15日；英属香港§!\n§Y背景：§!§L何世礼生于一个极其富有的中欧混血家庭，他是香港首富何东爵士的三子。1914年，何世礼入读拔萃女书院，成为了这所女子学校里的一名男学生。1916年，他转入皇后学院学习，之后又前往南京的陆军军官学校就读。何世礼对军事生涯充满热情，在吴佩孚和齐燮元的建议下，他申请进入保定军校学习，但直奉战争导致该校关闭。1925年，何世礼准备远赴英国胡列兹皇家军事学院学习，但英国革命推翻了与他家族有着密切联系的旧秩序，他的这一尝试也因此作罢。\n\n何世礼于是转而前往加拿大皇家军事学院学习，并于1927年毕业，成为一支久经战阵的皇家坦克部队的一员。在此期间，他还学习了有关重型火炮的知识。直系在1927、28两年间中国的一系列重大变故中笑到了最后，但代价是多地被划入“使馆城市”的庞大租界中。何世礼对英国在这些事件中扮演的角色感到厌恶，在意识到自己没有多少影响力后，他出于爱国之情正式放弃了英国国籍，并被解除了军职。然后他前往德国继续深造炮兵，并因其技术高超而受到赞扬，后于1930年乘游轮荣归故里。\n\n他在八省联合中谋得了一份差事，但对八省联合在1932年起义中的残暴行为颇感失望。于是他前往上海中立区在德军指挥下服役以避免违反国际条约规定，他至今仍未回到齐燮元麾下效力。§!"
+ LEC_he_fu_eco: "何福"
+ LEC_he_fu_eco_desc:0 "§Y生于：§!§L1863年11月30日；英属香港§!\n§Y背景：§!§L何福为何东二弟，生父为何仕文。1879年，毕业于中央书院，随即担任该校助教。1885年，何福入职Dennys and Mossop 律师行，成为翻译员。约1888年，在妹夫黄金福引荐下，成为九龙仓买办。1891年，至怡和洋行工作，时其长兄何东担任该行买办。1900年，何东引退，何福遂接掌怡和买办之位，成为该行华总经理。何福于社会事务多有参与，1891年，即受港府任命为太平绅士。1913年，成为定例局议员。同时于慈善及教育事业亦大力支持，在东华医院、保良局、华人公立医局委员会、孔教协会及香港大学等处皆有担任职务。§!"
+ LEC_Philip_sec: "菲利普·沙逊"
+ LEC_Philip_sec_desc:0 "§Y生于：§!§L1888年12月4日；法兰西第三共和国、巴黎§!\n§Y背景：§!§L菲利普·沙逊爵士，第三代从男爵，是两个犹太富商家族的结合体，其祖父阿尔伯特·沙逊是大卫·沙逊的长子，他的母亲是艾琳·卡罗琳，古斯塔夫·塞缪尔·德·罗斯柴尔德的女儿。他在法恩伯勒预科学校和伊顿公学接受教育，然后进入牛津大学。还在牛津时，他就加入了东肯特郡民兵团，并被任命为少尉。第一次世界大战期间，菲利普于1915年至1918年担任陆军元帅道格拉斯·黑格爵士的私人秘书。1920年，菲利普担任大卫·劳合·乔治的议会私人秘书。1924年担任空军副国务大臣，英国大革命爆发后，菲利普跟随政府逃亡加拿大，直到他的从堂兄弟维克托·沙逊从上海寄来一份信后，菲利普爵士才踏上了这远东的土地。§!"
+ LEC_shi_huai_ya_eco: "约克·基兹顿·施怀雅"
+ LEC_shi_huai_ya_eco_desc:0 "§Y生于：§!§L1893年2月19日；英国，伦敦§!\n§Y背景：§!§L约克·基兹顿·施怀雅是杰克·施怀雅的长子，约翰·塞缪尔·施怀雅的孙子。1913年加入家族企业——太古集团，他从1914年8月起被派往香港志愿军团担任少尉来到香港。他于1915年重返法国埃塞克斯郡民兵团。战争期间，他两次受伤，导致部分听力受损，后来被任命为骑兵团马术学校的教官。他的弟弟格伦于1915年在伊普尔战役中阵亡，年仅18岁。英国大革命之后，约克逃出英国来到香港。§!"
+ LEC_kai_zi_wei_eco: "凯自威"
+ LEC_kai_zi_wei_eco_desc:0 "§Y生于：§!§L1903年；日本，神奈川县横滨市§!\n§Y背景：§!§L凯自威，英语原名：William·Johnstone·Keswick。是苏格兰商业王朝凯瑟克家族的第三代成员，凯瑟克家族自19世纪开始与亚洲及香港有密切关系，为怡和洋行的主要股东。凯自威出生于日本横滨，是亨利·凯瑟克和妻子艾达的儿子。他小时候回到英国，就读于温彻斯特学校和剑桥大学三一学院。他于1926年抵达远东，他从1935年起负责上海办事处，同时也是前上海工部局主席会的一员。§!"
+ LEC_li_de_er_for: "李德尔"
+ LEC_li_de_er_for_desc:0 "§Y生于：§!§L1899年6月29日；大清帝国，上海公共租界§!\n§Y背景：§!§L李德尔是约翰和马里恩（海利尔）利德尔的儿子。他在马尔伯勒学院接受教育，1919 年毕业。他加入了利德尔兄弟家族公司，该公司由他的叔叔C. Oswald Liddell于19世纪80年代在上海创立。他的父亲于 1888年加入该公司。1932年，他成为利德尔兄弟有限公司的董事总经理。§!"
+ LEC_kadoorie_eco: "艾利·嘉道理"
+ LEC_kadoorie_eco_desc:0 "§Y生于：§!§L1867年；奥斯曼帝国，巴格达§!\n§Y背景：§!§L1880年，艾利·嘉道理从孟买来到上海，成为巴格达犹太公司大卫·沙逊父子公司的一名雇员。几年之内，他就积累了大量财富，并开始自己做生意，在上海和香港都开设了公司。20世纪初，中华电力公司重组时，他成为最大股东。在接下来的二十年里，嘉道理兄弟发家致富，在银行、橡胶种植园、电力和房地产领域都取得了成功，并获得了香港酒店有限公司的大部分股份。§!"
 
  SHC_robbie_hoshailai: "何世礼"
+ POLITICS_robbie_hoshailai_DESC:0 "§Y陆军将领介绍\n生于：§!§g1906年5月15日；英属香港§!\n§Y军旅生涯：§!§g何世礼生于一个极其富有的中欧混血家庭，他是香港首富何东爵士的三子。1914年，何世礼入读拔萃女书院，成为了这所女子学校里的一名男学生。1916年，他转入皇后学院学习，之后又前往南京的陆军军官学校就读。何世礼对军事生涯充满热情，在吴佩孚和齐燮元的建议下，他申请进入保定军校学习，但直奉战争导致该校关闭。1925年，何世礼准备远赴英国胡列兹皇家军事学院学习，但英国革命推翻了与他家族有着密切联系的旧秩序，他的这一尝试也因此作罢。\n\n何世礼于是转而前往加拿大皇家军事学院学习，并于1927年毕业，成为一支久经战阵的皇家坦克部队的一员。在此期间，他还学习了有关重型火炮的知识。直系在1927、28两年间中国的一系列重大变故中笑到了最后，但代价是多地被划入“使馆城市”的庞大租界中。何世礼对英国在这些事件中扮演的角色感到厌恶，在意识到自己没有多少影响力后，他出于爱国之情正式放弃了英国国籍，并被解除了军职。然后他前往德国继续深造炮兵，并因其技术高超而受到赞扬，后于1930年乘游轮荣归故里。\n\n他在八省联合中谋得了一份差事，但对八省联合在1932年起义中的残暴行为颇感失望。于是他前往上海中立区在德军指挥下服役以避免违反国际条约规定，他至今仍未回到齐燮元麾下效力。§!"
+ SHC_Philip_Sassoon: "菲利普·沙逊"
+ POLITICS_Philip_Sassoon_DESC:0 "§Y陆军将领介绍\n生于：§!§g1888年12月4日；法兰西第三共和国、巴黎§!\n§Y军旅生涯：§!§g菲利普·沙逊爵士，第三代从男爵，是两个犹太富商家族的结合体，其祖父阿尔伯特·沙逊是大卫·沙逊的长子，他的母亲是艾琳·卡罗琳，古斯塔夫·塞缪尔·德·罗斯柴尔德的女儿。他在法恩伯勒预科学校和伊顿公学接受教育，然后进入牛津大学。还在牛津时，他就加入了东肯特郡民兵团，并被任命为少尉。第一次世界大战期间，菲利普于1915年至1918年担任陆军元帅道格拉斯·黑格爵士的私人秘书。1920年，菲利普担任大卫·劳合·乔治的议会私人秘书。1924年担任空军副国务大臣，英国大革命爆发后，菲利普跟随政府逃亡加拿大，直到他的从堂兄弟维克托·沙逊从上海寄来一份信后，菲利普爵士才踏上了这远东的土地。§!"
 
  SHC_He_Dong: "何东"
- POLITICS_HE_DONG_DESC:0 "何东爵士，本名启东，字晓生，1862年12月22日生于香港。何东初受教于传统汉文私塾，于1873年入中央书院接受西式教育。1878年，何东以优异成绩毕业离校，任职于广东海关。两年后，转入渣甸洋行任华人部初级助理员。何东表现突出，一年后获提升为买办，逐步接管洋行旗下众多重要企业。1881年向海关辞职加入香港怡和洋行华人部任职初级助理员专责翻译，因表现突出而获迅速提升为买办助理。在怡和任职仅两年的1883年接替姐夫蔡昇南成为买办，不久更获委任为刚成立的“香港火烛保险公司”及“广东保险公司”的总买办。在任职买办的同时，何东自资成立“何东公司”（Ho Tung & Company）从事食糖的买卖，而胞弟何福及何甘棠亦加入怡和成为买办。1894年何东接任吴炳垣成为怡和洋行华总经理，于1900年以健康欠佳为由辞职，由其弟何福接任。1906年何东向香港总督会同行政局申请获准在中环半山居住，成为自香港成为英国殖民地后，首位在太平山山顶居住的拥有中国血统的人士。此后何东一面从商，一面从政，在赚钱之余也在中国各军阀间长袖善舞，既和国民党保持着良好关系，又和奉系军阀偶有来往..."
+ POLITICS_HE_DONG_DESC:0 "何东爵士，本名启东，字晓生，1862年12月22日生于香港。何东初受教于传统汉文私塾，于1873年入中央书院接受西式教育。1878年，何东以优异成绩毕业离校，任职于广东海关。两年后，转入渣甸洋行任华人部初级助理员。何东表现突出，一年后获提升为买办，逐步接管洋行旗下众多重要企业。1881年向海关辞职加入香港怡和洋行华人部任职初级助理员专责翻译，因表现突出而获迅速提升为买办助理。在怡和任职仅两年的1883年接替姐夫蔡昇南成为买办，不久更获委任为刚成立的“香港火烛保险公司”及“广东保险公司”的总买办。在任职买办的同时，何东自资成立“何东公司”（Ho Tung & Company）从事食糖的买卖，而胞弟何福及何甘棠亦加入怡和成为买办。\n\n1894年何东接任吴炳垣成为怡和洋行华总经理，于1900年以健康欠佳为由辞职，由其弟何福接任。1906年何东向香港总督会同行政局申请获准在中环半山居住，成为自香港成为英国殖民地后，首位在太平山山顶居住的拥有中国血统的人士。此后何东一面从商，一面从政，在赚钱之余也在中国各军阀间长袖善舞，既和国民党保持着良好关系，又和奉系军阀偶有来往，何东从不认为自己并非中国人，相反他为自己身为中国人而自豪，但是他混血儿的身份导致了他从小受到来自中国人和外国人的双方面歧视，因此在某些时候他表现得极端拥护传统文化，认为传统的即是好的。"
  SHC_Sha_Xun: "维克托·沙逊"
- POLITICS_Sha_Xun_DESC:0 "维克多·沙逊爵士，第三代从男爵，是英籍犹太富商沙逊家族的第四代，商人及酒店经营者，塞法迪犹太人，来自富有的巴格达犹太人沙逊家族商人和银行家族。维克托爵士在第一次世界大战期间曾在皇家飞行队服役。他在1916年的一次飞机失事中幸存下来，但腿部受伤，这让他终生受苦。1924年，他的父亲去世，维克托继承了他的头衔，成为孟买第三代从男爵。他移居印度，在那里管理家族的纺织厂，并在印度立法议会任职。20世纪二三十年代，沙逊将大量财富从印度转移到中国上海，向当地经济投资了数百万美元，推动了上海的房地产繁荣。沙逊爵士经常在世界各地出差或旅游，他将时间分配在浦那、印度和上海两地。他收购了华懋地产公司、华懋酒店公司和至少50家其他公司。1929年，沙逊建造了华懋酒店以及其他大型酒店、办公楼和住宅，其中很多位于上海市中心的滨水区外滩(包括汉密尔顿大厦、新都城酒店和河堤)。他一度在外滩拥有1,800多处房产。是上海滩最富有的人。"
+ POLITICS_Sha_Xun_DESC:0 "维克多·沙逊爵士，第三代从男爵，是英籍犹太富商沙逊家族的第四代，其祖父伊利亚斯·沙逊是大卫·沙逊的次子。维克托爵士在第一次世界大战期间曾在皇家飞行队服役。他在1916年的一次飞机失事中幸存下来，但腿部受伤，这让他终生受苦。1924年，他的父亲去世，维克托继承了他的头衔，成为孟买第三代从男爵。他移居印度，在那里管理家族的纺织厂，并在印度立法议会任职。20世纪二三十年代，沙逊将大量财富从印度转移到中国上海，向当地经济投资了数百万美元，推动了上海的房地产繁荣。沙逊爵士经常在世界各地出差或旅游，他将时间分配在浦那、印度和上海两地。他收购了华懋地产公司、华懋酒店公司和至少50家其他公司。1929年，沙逊建造了华懋酒店以及其他大型酒店、办公楼和住宅，其中很多位于上海市中心的滨水区外滩(包括汉密尔顿大厦、新都城酒店和河堤)。他一度在外滩拥有1,800多处房产。是上海滩最富有的人。"
 
  LEC_syndicalist_party_HD:0 "上海总工会"
  LEC_syndicalist_party_HD_long:0 "旧工会残余"
@@ -752,6 +772,7 @@
  SHC_buy_weapon_for_wrold_hidden:0 "暂时不查看我们的“贸易伙伴”"
  SHC_our_money_to_where:0 "暂时不查看我们的收益能用来干什么"
  SHC_zhao_mu_wai_ji_gu_yong_bing_tt:0 "§Y我们将雇佣一支佣兵来扩充我们的军事力量§!"
+ SHC_zhao_mu_wai_ji_gu_yong_bing_jing_ying_tt:0 "§Y我们将雇佣一支精锐佣兵来扩充我们的军事力量§!"
  SHC_zhao_mu_wai_ji_gu_yong_bing_number_tt:0 "§Y我们将能招募更多佣兵§!"
  SHC_xun_lian_yong_bing_tt:0 "佣兵质量将会提升"
  SHC_zhao_mu_wai_ji_gu_yong_bing_trigger_tt:0 "还能执行[?SHC_zhao_mu_wai_ji_gu_yong_bing_var]次"
@@ -785,14 +806,16 @@
  SHC_hidden_buy_weapon_for_wrold:0 "隐藏§Y购买§!军火相关决议"
  SHC_not_hidden_buy_weapon_for_wrold:0 "显示§Y购买§!军火相关决议"
  SHC_buy_weapon_for_wrold:0 "从[From.GetNameDef]购买军火"
- SHC_hidden_xun_lian_ta_men_de_jun_dui:0 "隐藏§P训练军阀军队§Y相关决议"
- SHC_not_hidden_xun_lian_ta_men_de_jun_dui:0 "显示§P训练军阀军队§Y相关决议"
+ SHC_hidden_xun_lian_ta_men_de_jun_dui:0 "隐藏§P训练军阀军队§!相关决议"
+ SHC_not_hidden_xun_lian_ta_men_de_jun_dui:0 "显示§P训练军阀军队§!相关决议"
  SHC_xun_lian_ta_men_de_jun_dui:0 "为[From.GetNameDef]训练军队"
- SHC_hidden_our_money_to_where:0 "隐藏§R收益§Y相关决议"
- SHC_not_hidden_our_money_to_where:0 "显示§R收益§Y相关决议"
+ SHC_hidden_our_money_to_where:0 "隐藏§R收益§!相关决议"
+ SHC_not_hidden_our_money_to_where:0 "显示§R收益§!相关决议"
  SHC_Irrigation_decision:0 "扩大我们的城市"
- SHC_build_army_factor_decision:0 "建设军工厂"
+ SHC_build_army_factor_decision:0 "在[FROM.GetName]建设军工厂"
  SHC_build_army_factor_decision_desc:0 "我们的军工厂将会为我们提供更多的军火，让我们的贸易更加强大。"
+ SHC_tou_zi_jiao_yu:0 "投资教育"
+ SHC_weapon_tech_develop:0 "投资武器开发"
  SHC_sheng_chan_zhi_shang:0 "生产至上，经济至上"
  SHC_zhao_mu_wai_ji_gu_yong_bing_number:0 "扩大佣兵规模"
  SHC_xun_lian_yong_bing:0 "有钱能使鬼推磨"
@@ -869,7 +892,7 @@
  LEC_zhen_dun_bao_ye:0 "整顿报业"
  LEC_zhen_dun_bao_ye_desc:0 "上海城作为中国最现代化的城市，报业自然也是非同寻常的繁荣。但是维克托不会忘了那些家伙是怎么戏谑自己的，也不会忘记那个背叛了家族的姑妈在报业的所作所为。上海的新闻工作者要是还想在这一行当工作，他们就得学会乖乖听话。" 
  LEC_xiang_gang_de_ming_mai:0 "香港的命脉"
- LEC_xiang_gang_de_ming_mai_desc:0 "香港可不止他们何东一家人，汇丰银行也有沙逊家的一份，香港的另一大富商嘉道理家族便是从沙逊学校毕业，跟随维克托的祖父大卫·沙逊发家的，他们两家保持着相当不错的关系，现在是时候联合起来收回香港，赶走那些不愿意合作的自大傲慢的混血佬了。" 
+ LEC_xiang_gang_de_ming_mai_desc:0 "香港可不止他们何东一家人，汇丰银行也有沙逊家的一份，香港的另一大富商嘉道理家族便是从沙逊学校毕业，跟随维克托的祖父大卫·沙逊发家的，他们两家保持着相当不错的关系，现在是时候联合起来收回香港的旧资产了，赶走那些不愿意合作的自大傲慢的混血佬了。" 
  LEC_kuo_jian_sha_xun_xue_xiao:0 "扩建沙逊学校"
  LEC_kuo_jian_sha_xun_xue_xiao_desc:0 "要想让公司的员工保持忠诚，要想最好的开展慈善事业，莫过于建设属于我们自己的学校。维克托的祖父大卫便是这样做的，现在维克托需要将这一套重新搬回上海，建设一座上海有史以来最全面最庞大的学校。" 
  LEC_shou_wei_hang_xian:0 "守卫我们的航线"
@@ -906,19 +929,9 @@
  leche.6.b:0 "选择汪兆铭"
  leche.6.c:0 "还是选择我们的老朋友吧"
  leche.6.e:0 "吴佩孚会是一个好的合作对象的"
- leche.7.t:0 "收购香港"
- leche.7.d:0 "乘着使馆城市理事会奔溃的时候，我们的军队入驻了香港，暂时管控了这里。但是随着上海局势稳定下去。和我们有着不少联系的买办何东成为了那里新的主人，并向我们发来了一份提案：收购香港，尽管这个想法多少有点异想天开，但是细想下去好像也许不是不可以？"
- leche.7.a:0 "当然是答应他 "
- leche.7.b:0 "他在做啥美梦？"
  leche.8.t:0 "上海的礼物"
  leche.8.d:0 "盘踞上海等地的使馆城市理事会宣告破产之后，我们就一直盯着上海的动荡，令我们没有想到的是原本大家认为大概率会胜利的黑帮们并没有成功站稳脚跟。来自香港的买办何东和他的雇佣兵夺取了这里的控制权。如今他们稳定住局势之后，向我们派遣了一名外交人员，他们表示希望和我们进一步合作，他将向我们提供军火援助，而我们只需要发表声明维持他们的特殊地位即可，对此，我们的回答当然是..."
  leche.8.a:0 "礼多人不怪"
- leche.9.t:0 "同意收购"
- leche.9.d:0 "好消息，他们同意了我们的提案！"
- leche.9.a:0 "好！"
- leche.10.t:0 "拒绝收购"
- leche.10.d:0 "坏消息，他们拒绝了。"
- leche.10.a:0 "TM的"
  leche.11.t:0 "扩建皇仁书院"
  leche.11.d:0 "在1841年香港成为英国殖民地前，公开的教育主要由私塾及后来的华人乡村学校提供。1847年，第二任香港总督戴维斯组成专门委员会，选定三所私塾提供每校每月十元补助，由1848年开始升格为官立学堂。至1859年，香港的官立学堂已发展至19所，由政府提供教室和师资，每个学生要给教师铜钱二十五文“作茶资之用”，但无需交学费。1860年7月理雅各领导下的教育委员会(The Board of Education) 推行《理雅各教育革新计划》，将维多利亚城内的皇家书馆，包括香港成为殖民地前已开始教学的太平山学堂（Tai-ping-shan School）、中环学堂（Chung-wan School）、上环学堂（Sheung-wan School），合并成“大书院”（Government Central School，又译中央书院）。中央书院于1862年1月1日的校舍座落于中环歌赋街与城皇街交界，即今圣公会基恩小学位置。1894年，政府再度刊宪易名为皇仁书院（Queen's College）。\n\n1878年，16岁的何东爵士以优异成绩从皇仁书院毕业。毕业后随即加入广东海关，建立初步人际网络及与西洋的国际贸易操作，开启了他传奇的一生。随着交易的完成，香港重新回到我们的手中，何东爵士的第一件事就是选择，向他的这所母校投资扩建，一栋新的教学楼将被命名为“何东楼”。"
  leche.11.a:0 "为我们的未来干杯"
@@ -1051,6 +1064,14 @@
  LEC_bu_lao_zhe_bu_shi:0 "不劳者无食"
  LEC_bu_lao_zhe_bu_shi_desc:0 "3:12 我知道世人、莫强如终身喜乐行善。"
  LEC_you_de_zhi_ren:0 "有德之人"
+ LEC_for_the_god_state:0 "天主赐福之地"
+
+ SHC_jiao_hui_for_all:0 "传播主的福音"
+ SHC_jiao_hui_for_all_desc:0 "天主的爱如同阳光，普照每一个灵魂。祂创造了你，以无限的慈悲呼唤你的名字。无论过去的伤痕或迷茫，祂始终等待你归向祂的怀抱。耶稣基督——天父的独生子——为救赎我们而牺牲，以复活战胜死亡，赐予我们永生的希望。教会是祂在世间的家，我们邀请你一同分享这份恩典：在圣事中遇见祂的临在，在祈祷中聆听祂的声音，在爱德中活出真理。你的生命是宝贵的，天主的计划远超你的想象。愿圣神点燃你心中的渴望，愿玛利亚——众人的母亲——为你代祷。请鼓起勇气，迈出信德的一步。我们在这里，与你同行。\n\n“天主竟这样爱了世界，甚至赐下了自己的独生子，使凡信祂的人不至丧亡，反而获得永生。”（若望福音3:16）\n\n愿平安与喜乐常驻你心，直到永远。阿们。" 
+ SHC_jiao_hui_for_all_small:0 "在[FROM.GetName]传播主的福音"
+ SHC_jiao_hui_for_all_middle:0 "在[FROM.GetName]传播主的福音"
+ SHC_jiao_hui_for_all_large:0 "在[FROM.GetName]传播主的福音"
+ SHC_jiao_hui_for_all_huge:0 "在[FROM.GetName]传播主的福音"
 
  LEC_shang_di_de_huai_bao:0 "终回主的怀抱"
  LEC_shang_di_de_huai_bao_desc:0 "在上海陷入混乱之际，主的牧师们不忍心上海市民陷入苦难，于是伸出了援手，如今上海终于得到了救赎" 
