--- a/localisation/ideologies_l_simp_chinese.yml
+++ b/localisation/ideologies_l_simp_chinese.yml
@@ -98,3 +98,5 @@
  lixing_group_subtype_desc:0 "§Y力行三民主义§!\n\n力行三民主义是一种特殊的三民主义变体，其主要来自于三民主义力行社及其分支团体。他们认为旧的国民党已然是腐朽不堪，被官僚化、资产化的顽疾所困扰，党内派系林立，互相猜忌倾轧。所谓的改组、再造已经完全无法拯救国民党，最好的办法是根本改造，重新做起，需要在党内另建一种新的组织，以充实党的内容，建造党的灵魂，将国民党塑造成一个比英国准则派所主张还要严密的组织。他们希望塑造一位真正的领袖，一个只觉为党服务，不敢后人，只有公的感情、革命的感情，能够指导党员、受党员信任的领袖。并在他的领导，重拾革命传统，清除党内的腐化情况。办到中央同志苦于一切同志，全党同志苦于民众。不单从精神上培养党员的人格，物质上彻底消灭党内的权利观念，使一切名誉地位属于刻苦工作的同志。"
  Coca_Cola_Monarchy:0 "可口可乐君主制"
  Coca_Cola_Monarchy_desc:0 "§Y可口可乐君主制§!\n\n可口可乐君主制是一种由可口可乐公司发明的一种新型君主制，其主要特点是国家的一切权力都掌握在可口可乐公司的手中，国家的一切政策都由可口可乐公司决定，国家的一切资源都由可口可乐公司掌控。可口可乐便是国家的君主，他拥有国家的一切权力，他的权威无人能够挑战。可口可乐公司的董事会是国家的最高决策机构，他们决定国家的一切政策，他们的决定无人能够反对。可口可乐公司的股东是国家的统治阶级，他们掌握国家的一切资源，他们的利益无人能够侵犯。可口可乐公司的员工是国家的统治者，他们执行国家的一切政策，他们的权威无人能够质疑。可口可乐君主制是一种新型的君主制，它将国家的一切权力都集中在可口可乐公司的手中，它将国家的一切资源都掌握在可口可乐公司的手中，它将国家的一切政策都由可口可乐公司决定，它将国家的一切权威都集中在可口可乐公司的手中。"
+ Anti_Posadasism_subtype:0 "逆波萨达斯主义"
+ Anti_Posadasism_subtype_desc:0 "§Y逆波萨达斯主义§!\n\nJ·波萨达斯是骗我们的，整个宇宙都已经被外星企鹅白匪军们给瓜分了，全宇宙的无产阶级大革命早已经失败了，马克思正是上一次宇宙红白大战的共产主义残党，他驾驶着宇宙飞船来到地球，在这里传播最后的火种，我们的地球是全宇宙唯一一个存留着共产主义的地方，如今白匪企鹅军已经获取了我们的坐标，他们正在路上，我们必须抵抗到底！"
