--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 -翻新了教会线、何东线的文案、icon、国策效果
 -为何东线和教会线各增加了一个新机制
+-为上海大道政府线增加了两个新将领
 -调整了FNG的部分内容，并修复了一些BUG
 -修复了朱德错误宣称国民党左派领导权的BUG
 -修复了山东在成为狗之后还能因为德意志的影响力变成德国傀儡的BUG
