--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1523,16 +1523,18 @@
  LEC_georg_wetzell: "格奥尔格·韦策尔"
  LEC_walter_stennes: "瓦尔特·施坦内斯"
  LEC_michitaro_komatsubara: "小松原道太郎"
+ LEC_michitaro_komatsubara_commander_desc: "§Y生于：§!§L1885年7月20日；大日本帝国、神奈川县横滨市§!\n§Y军旅生涯：§L\n小松原出生于神奈川县横滨，其父亲是当地的一名海军工程师。1905年，他毕业于日本帝国陆军学校第18期。1909年至1910年，他担任驻俄武官，并能说一口流利的俄语。回国后，他被指派在日本帝国陆军总参谋部和日本最高战争委员会担任多个参谋职务。1914年，他作为第一次世界大战日本远征军的一员参加了青岛战役。1915年，小松原回国，从陆军参谋大学第27期毕业，并被任命为日本帝国陆军第34步兵联队的指挥官。1919年起，小松原被派往陆军总参谋部第二局第四科俄罗斯分部。华盛顿会议后小松原被日本军部派遣来到上海维护日本在华利益。§!"
  LEC_koreshige_inuzuka: "犬塚惟重"
+ LEC_koreshige_inuzuka_commander_desc: "§Y生于：§!§L1890年7月11日；大日本帝国、东京§!\n§Y军旅生涯：§L\n犬冢出生于东京，是佐贺藩前武士家臣的长子，他毕业于早稻田大学附属中学，参军入伍，进入日本帝国海军学校第39期。毕业后他进入海军参谋学院，并在多艘舰艇上服役，包括肥前号、巡洋舰春日号、八云号、北上号、木曾号和日进号。第一次世界大战期间，犬冢驻扎在地中海，与日本远征军一同前往马耳他，这是日本在英日同盟下对盟军战争贡献的一部分。1934年，犬塚被派遣来到上海。\n\n§Y重要信息：犬塚惟重对《锡安长老会纪要》深信不疑，并主张引犹太人定居满洲国并帮助那里建设基础设施。他们不仅会带来工程知识和创造力，而且生活在满洲国的犹太人还会让日本得到美国和其他西方国家的青睐。犬塚认为，赢得犹太人的支持至关重要，因为在他看来，犹太人控制着世界市场。尽管这一机会尚未施行，但是犬塚与沙逊家族等犹太富商家族主张在上海建立犹太自治区的计划已经付诸实践。§!§!"
  LEC_edward_barrett: "爱德华·巴雷特"
  LEC_german_time: "格尔曼·蒂梅"
  LEC_Legation_Police: "上海警察局"
  LEC_william_ewart_fairbairn: "威廉·尤尔特·费尔贝恩"
- LEC_WILLIAM_FAIRBAIRN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1885年2月28日\n联合王国 里克斯曼沃斯\n§Y军旅生涯：§L\n曾经的皇家海军与上海红灯区警官，威廉·伊瓦尔特·费尔贝恩因他在执勤时参加无数次街头械斗而得到的伤疤和组织上海骑警的特种防暴小组而闻名。费尔班被称作“危险的丹”，这是因为他不仅精通拳击、摔跤、赛法斗、柔道与功夫，还根据这些创立了自己的格斗技巧“防卫道”。根据警方记录，他参加过五百多场持械或非持械的非训练性搏斗，并且还定制了一件设计用来阻挡7.63×25毫米毛瑟子弹的防弹衣。如今他绝大多数时间都用来激励万国商团其他成员学会近身格斗术的基本技巧。"
+ LEC_WILLIAM_FAIRBAIRN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1885年2月28日\n联合王国 里克斯曼沃斯\n§Y军旅生涯：§L\n曾经的皇家海军与上海红灯区警官，威廉·伊瓦尔特·费尔贝恩因他在执勤时参加无数次街头械斗而得到的伤疤和组织上海骑警的特种防暴小组而闻名。费尔班被称作“危险的丹”，这是因为他不仅精通拳击、摔跤、赛法斗、柔道与功夫，还根据这些创立了自己的格斗技巧“防卫道”。根据警方记录，他参加过五百多场持械或非持械的非训练性搏斗，并且还定制了一件设计用来阻挡7.63×25毫米毛瑟子弹的防弹衣。如今他绝大多数时间都用来激励万国商团其他成员学会近身格斗术的基本技巧。§!"
  LEC_francis_wogan_festing: "弗朗西斯·沃根·费斯廷（菲士廷）"
- LEC_FRANCIS_FESTING_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1902年8月28日\n联合王国 都柏林\n§Y军旅生涯：§L\n1921年，费斯汀毕业于桑赫斯特皇家军事学院。他曾担任马德拉斯地区前总司令约翰·伯内特-斯图亚特的副官，在英属印度陆军或者说英国东方司令部前途无量，直到革命爆发。现在，正如大多数缺少工团主义倾向的英国军官一样，他只能在大英帝国的旧殖民地之间漂泊流浪。而逃至加拿大的帝国政府很明显没有那么多预算支撑她过去那庞大的军队，因此费斯汀不能在现存的帝国领地上继续服役，只能上海与旧时的军友们住在一起。在那儿没有人告诉你不要再穿旧时的制服，而且每天早上还有机会喝到强烈的杜松子酒。"
+ LEC_FRANCIS_FESTING_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1902年8月28日\n联合王国 都柏林\n§Y军旅生涯：§L\n1921年，费斯汀毕业于桑赫斯特皇家军事学院。他曾担任马德拉斯地区前总司令约翰·伯内特-斯图亚特的副官，在英属印度陆军或者说英国东方司令部前途无量，直到革命爆发。现在，正如大多数缺少工团主义倾向的英国军官一样，他只能在大英帝国的旧殖民地之间漂泊流浪。而逃至加拿大的帝国政府很明显没有那么多预算支撑她过去那庞大的军队，因此费斯汀不能在现存的帝国领地上继续服役，只能上海与旧时的军友们住在一起。在那儿没有人告诉你不要再穿旧时的制服，而且每天早上还有机会喝到强烈的杜松子酒。§!"
  LEC_reginald_yorke_tyrwhitt: "雷金纳德·约克·蒂里特"
- LEC_REGINALD_TYRWHITT_NAVY_DESC:0 "§Y海军指挥官介绍\n§Y生于：§L\n1870年5月10日\n联合王国 牛津\n§Y海军生涯：§L\n雷吉纳·约克·蒂里特爵士最初于1883年在皇家海军不列颠尼亚号上作为军官服役，随后他不断地从同僚中脱颖而出，最终在世界大战期间担任哈里奇舰队的指挥官，即1914年打响大战第一枪的队伍。这支舰队在蒂里特指挥下最著名的一次行动就是突袭库克斯港，在这场战役中海军轰炸机发挥了关键作用，在空中打击了德国港口，并以零伤亡撤出。蒂里特履历上唯一的瑕疵就是他嘉奖了约翰·诺尔斯·伊姆·托恩船长，后者因失误导致了1925年的普利茅斯大罢工。蒂里特作为中国地区最高长官，在1926年北伐时对不列颠军队撤至澳大利亚后德国接踵而至对香港的“保护”多少负有责任，因此他对英国同胞至今也不能对他释怀。"
+ LEC_REGINALD_TYRWHITT_NAVY_DESC:0 "§Y海军指挥官介绍\n§Y生于：§L\n1870年5月10日\n联合王国 牛津\n§Y海军生涯：§L\n雷吉纳·约克·蒂里特爵士最初于1883年在皇家海军不列颠尼亚号上作为军官服役，随后他不断地从同僚中脱颖而出，最终在世界大战期间担任哈里奇舰队的指挥官，即1914年打响大战第一枪的队伍。这支舰队在蒂里特指挥下最著名的一次行动就是突袭库克斯港，在这场战役中海军轰炸机发挥了关键作用，在空中打击了德国港口，并以零伤亡撤出。蒂里特履历上唯一的瑕疵就是他嘉奖了约翰·诺尔斯·伊姆·托恩船长，后者因失误导致了1925年的普利茅斯大罢工。蒂里特作为中国地区最高长官，在1926年北伐时对不列颠军队撤至澳大利亚后德国接踵而至对香港的“保护”多少负有责任，因此他对英国同胞至今也不能对他释怀。§!"
 
  TRIAD_POWER:0 "黑帮权力增加"
  TARIFF_INCR:0 "关税增加"
