--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -12,6 +12,9 @@
  han_jian_victory:0 "§H日本人的傀儡占据了胜利§!"
  xin_jiao_du_tu_victory:0 "§R新教信徒们夺取了胜利§!"
 
+ SHC_hui_feng_company: "汇丰控股"
+ SHC_Star_Ferry: "天星小轮"
+
  SHC_totalist_party:0 "十月社"
  SHC_totalist_party_long:0 "十月社(October Society)\n§g十月社成立于1930年1月1日，由刘仁静、王凡西、宋逢春牵头组织。是一个托洛茨基主义组织，但和彭述之等人相比，十月社的成员更加年轻，缺少革命经验，但也更加理想化，更加激进。§!"
  SHC_syndicalist_party:0 "中国工团党"
@@ -1381,7 +1384,7 @@
  SHC_gong_rong_quan_de_xin_cheng_yuan_desc:0 "无论如何，我们已经失去了抵抗的可能性，日本人 的枷锁正在套拢，袁良再一次沦为了一支不值钱的花瓶。就这么默默的看着上海落入日本人的手中，无可奈何。" 
 
  Shcjingcha.1.t:0 "胜利者的角逐"
- Shcjingcha.1.d:0 "在日本人的协助之下，上海市的警察们最终取得了胜利，但是胜利也不是那么容易品尝的，相对于在上海盘踞了近十年的袁良。日本人想要一个更好的傀儡，他们想要一个绝对的自己人来把控上海市——苏锡文，一个台湾人，一个在上海毫无根底，绝对不可能反叛的家伙，对于日本人而言他获许是一个更好的选择。但是袁良忍辱负重了十年，他不可能就这么松手，他用尽了自己的一切手段去劝说日本人上海的重要性，如果让一个什么都不懂的家伙来管理上海，黑帮、赤匪那些家伙一定会搞乱上海，这样的话就得不偿失了！他也在发动自己那仅有的一点儿亲信去上海造势。不得不说他很成功，他把握住了上海人、中国人对日本几十年以来的敌视，反苏锡文的运动一起接一起。但是，无论如何，最终这一切都要日本人来决断。上海的命运，从不在自己手中。"
+ Shcjingcha.1.d:0 "在日本人的协助之下，上海市的警察们最终取得了胜利，但是胜利也不是那么容易品尝的。相对于在上海盘踞了近十年的袁良，日本人更想要一个更好控制的傀儡，他们想要一个绝对的自己人来把控上海市——苏锡文，一个台湾人，一个在上海毫无根底，绝对不可能反叛的家伙，对于日本人而言他获许是一个更好的选择。但是袁良忍辱负重了十年，他不可能就这么松手，他用尽了自己的一切手段去劝说日本人上海的重要性，如果让一个什么都不懂的家伙来管理上海，黑帮、赤匪那些家伙一定会搞乱上海，这样的话就得不偿失了！他也在发动自己那仅有的一点儿亲信去上海造势。不得不说他很成功，他把握住了上海人、中国人对日本几十年以来的敌视，反苏锡文的运动一起接一起。但是，无论如何，最终这一切都要日本人来决断。上海的命运，从不在自己手中。"
  Shcjingcha.1.a:0 "上海警察捍卫了自己的荣耀"
  Shcjingcha.1.b:0 "新市长上任"
  Shcjingcha.2.t:0 "警务改革"
@@ -1439,6 +1442,14 @@
  SHC_WUY_DEF: "华东合众国"
 
  LEC_su_xi_wen_hog: "苏锡文"
+ 
+ SHC_su_xi_wen: "苏锡文"
+ Portrait_LEC_su_xi_wen_DESC: "苏锡文原名苏松治、苏有祥等，福建厦门人，早年他赴日本早稻田大学政治经济科留学，系统接受近代政治经济学教育。归国后，他投身政界，凭借专业背景迅速崭露头角，1920年代初期，他历任福建省财政局长、广东大元帅府财政署长兼民政司长等职，在国民党内部派系内属于胡汉民一派。派系斗争导致他十年不能进入政府机关，正因为此，他到了上海，在持志大学获得了一个教员职位。他在上海与日本浪人西村展藏结识，并逐渐接受了后者所提出的“大道主义”，在这一时期他改名锡文，但是与此同时他还使用着其他许多名字。他觉得自己有义务反对北洋政府的腐败，并为此政治主张而积极奔走，寻求建立新的政府。"
+
+ SHC_Saburou_Miura: "三浦三郎"
+ POLITICS_Saburou_Miura_DESC:0 "§Y陆军将领介绍\n生于：§!§g1893年3月26日；大日本帝国东京府§!\n§Y军旅生涯：§!§g三浦三郎毕业于中央陆军士官学校预备学校东京府立第一中学及该校主修科，1913年考入陆军士官学校第25期。1924年入读陆军大学校第36届。毕业后三浦先进入第77步兵团任连长，后进入宪兵训练学校，历任东京、千叶宪兵队排长，1931年起任宪兵司令部总务部策划科科长。上海动乱后，三浦被派遣来上海任上海宪兵局长。§!"
+ SHC_Eiichi_Kinoshita: "木下荣市"
+ POLITICS_Eiichi_Kinoshita_DESC:0 "§Y陆军将领介绍\n生于：§!§g1193年4月1日；大日本帝国§!\n§Y军旅生涯：§!§g木下荣市，早年接受系统的军事教育，先后就读于日本陆军士官学校第27期和陆军大学第37期，在士官学校期间，他主修步兵与宪兵专业，毕业后即进入宪兵系统，上海动乱后被派遣到上海负责镇压华人动乱。§!"
 
  SHC_shanghai_yuan:0 "沪圆"
  SHC_shanghai_yuan_desc:0 "上海人用上海钱" 
@@ -1448,8 +1459,11 @@
  SHC_crakkka_understanding_desc:0 " " 
  SHC_no_yourself:0 "清除自由主义瘟疫"
  SHC_no_yourself_desc:0 "别在街上闲逛，都给我回家去" 
+
  SHC_mitsubishi_organisation:0 "上海三菱"
  SHC_nagoya_arsenal:0 "名古屋兵工厂"
+
+ SHC_cong_ri_ben_huo_qu_yuan_zu:0 "从日本获取援助"
 
  SHC_xin_ming_zhu_jue_xing:0 "骄傲的沪民人"
  SHC_xin_ming_zhu_jue_xing_desc:0 "上海是远东最繁荣的城市，这是无数沪民人共同奋斗的结果，不像那些懒惰堕落的内陆人，上海人勤劳而机敏，他们懂得把握住任何机会。上海代表了中国最先进的文明，而上海人远比其他中国人更优越。所以，抬起头来，上海人！你们当以自己是上海人而感到自豪，并对上海的文化、历史和成就感到自豪。" 
