--- a/localisation/KR_Tengxun_l_simp_chinese.yml
+++ b/localisation/KR_Tengxun_l_simp_chinese.yml
@@ -44,3 +44,51 @@
  TXM.4.t:0 "灵气复苏"
  TXM.4.d:0 "上午9点55分。钱学森盘膝而坐，身前摆放着一炉香，青烟袅袅而升。他目光低垂，神色沉静，心跳与天地共振。这一夜，他破境三次。子时筑基，寅时结丹，卯时元婴。天光大亮之时，他已踏入化神之境，丹田如江海翻涌，神识铺展三百余里。此刻，他全身气机圆融，无一丝杂念，只等飞升雷劫落下。然而，就在天穹之上，劫云翻滚，紫雷酝酿之际，他的目光缓缓投向窗外。街头巷尾，挑担卖茶的老翁正吆喝生意，挑着扁担的脚夫在街角歇息，几个孩子围着糖人摊嬉闹着。茶馆里的说书人拍响惊堂木，讲的是边关将军马革裹尸的故事。人间，依旧是人间。\n\n钱学森缓缓吐出一口气，眉头微微蹙起。他自幼苦修，只为求道，如今得道，天门已开，何以心中仍有挂碍？飞升者众，然而人间道统却飘摇不定。灵气复苏才刚刚复苏，修士虽众，然道心不坚者十居其九，或迷失于权势，或堕落于私欲，或沉溺于血杀。天下将乱，苍生如草芥，他若离去，谁能撑起这残破世界的一线光？况且那天上来客也不甚友好，他若离去，这世界...\n\n天穹之上，雷音轰鸣，如天帝催促。他却依旧静坐，未曾动摇。“你可知，若不飞升，雷劫加身，神魂俱灭？”天威浩荡，苍穹深处似有神灵低语。钱学森微微一笑，轻轻拂去膝上的灰尘，缓缓起身，衣袖拂过香炉，烟雾翻腾而散。他朝苍穹拱手，声音平和而坚定。“世间学问未竟，人间道统未立，吾，岂能离去？”话音落下，紫雷倾泻而下，如天罚加身。城中万民遥遥望见天穹之变，皆惊恐跪地，直道神仙渡劫。而在雷霆中心，钱学森立于天地之间，身形如岳，气息如渊，面对天威竟不曾后退半步。雷火灼烧，皮肉寸寸崩裂，又于刹那间复原。神魂震荡，却又于炼化中更胜往昔。九道天雷之后，天地重归寂静。他站在原地，身周气机尽敛，然而当他睁开双目，万物瞬间失色。\n\n此刻，他已非凡俗之人，却亦非仙凡之界。天门已关，雷劫已过，他不曾飞升，却立于天地之巅。"
  TXM.4.a:0 "“这一日，钱学森入陆地神仙境界”"
+
+ TXM_he_is_coming:0 "天外来客"
+ TXM_he_is_coming_desc:0 " "
+
+ TXM_jun_fa:0 "唯有祂乃真神"
+ TXM_jun_fa_desc:0 " "
+ TXM_wei_ta_de_jiang_ling:0 "为祂的将临做准备"
+ TXM_wei_ta_de_jiang_ling_desc:0 " "
+ TXM_sheng_wu_quan_deng_ji:0 "生物圈等级制"
+ TXM_sheng_wu_quan_deng_ji_desc:0 " "
+ TXM_quan_bu_gei_wo_pa_xia:0 "只有我们才能站立"
+ TXM_quan_bu_gei_wo_pa_xia_desc:0 " "
+ TXM_mo_ri_fang_zhou_jue_yi:0 "盖亚的权杖"
+ TXM_mo_ri_fang_zhou_jue_yi_desc:0 "将全球生物圈纳入统一管理系统，任何未被基因标记的生命体都将被视作行星之敌。"
+ TXM_chui_hui_ren_lei:0 "清除猴子们的肮胀造物"
+ TXM_chui_hui_ren_lei_desc:0 " "
+ TXM_si_Lao_chong_bu_cun_zai:0 "只有我们才能思考"
+ TXM_si_Lao_chong_bu_cun_zai_desc:0 " "
+ TXM_fan_jin_hua_fa_ting:0 "反进化法庭"
+ TXM_fan_jin_hua_fa_ting_desc:0 " "
+ TXM_he_zhong_wei_yi:0 "合众为一"
+ TXM_he_zhong_wei_yi_desc:0 " "
+
+ TXM_huang_di:0 "为陛下征服一切"
+ TXM_huang_di_desc:0 " "
+ TXM_e_la_ke_si:0 "厄拉科斯"
+ TXM_e_la_ke_si_desc:0 " "
+ TXM_qing_chu_wu_yong_sheng_wu:0 "清除一切本土生物"
+ TXM_qing_chu_wu_yong_sheng_wu_desc:0 " "
+ TXM_jia_she_sheng_wy_zhi:0 "架设毛细塔采矿机"
+ TXM_jia_she_sheng_wy_zhi_desc:0 " "
+ TXM_chuan_tuo:0 "川陀"
+ TXM_chuan_tuo_desc:0 " "
+ TXM_yu_zhou_ke_wang_zhi_qiu:0 "宇宙渴望之球"
+ TXM_yu_zhou_ke_wang_zhi_qiu_desc:0 " "
+ TXM_yi_qie_de_zhong_xin_dian:0 "一切的中心点"
+ TXM_yi_qie_de_zhong_xin_dian_desc:0 " "
+ TXM_gor:0 "戈尔"
+ TXM_gor_desc:0 " "
+ TXM_ji_yin_gai_zao_ji_hua:0 "基因改造计划"
+ TXM_ji_yin_gai_zao_ji_hua_desc:0 " "
+ TXM_nu_yi_ke_yong_zhi_wu:0 "奴役生物圈"
+ TXM_nu_yi_ke_yong_zhi_wu_desc:0 " "
+ TXM_huang_di_guan_mian_shang_de:0 "为帝国献出一切"
+ TXM_huang_di_guan_mian_shang_de_desc:0 " "
+
+ TXM_cai_fa:0 "多么漂亮的蓝海"
+ TXM_cai_fa_desc:0 " "
